--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -26,6 +26,12 @@
     .btn-danger-alt {
         @apply text-white bg-red-200 hover:bg-red-300 rounded-lg text-sm px-5 py-2.5 mb-2 w-full border-[1px] border-red-500 text-red-500;
     }
+    .btn-success {
+        @apply text-white bg-green-500 hover:bg-green-600 rounded-lg text-sm px-5 py-2.5 mb-2 w-full;
+    }
+    .btn-success-alt {
+        @apply text-white bg-green-200 hover:bg-green-300 rounded-lg text-sm px-5 py-2.5 mb-2 w-full border-[1px] border-green-500 text-green-500;
+    }
     /* .error{
       @apply text-red-500 bg-red-200 border-[1px] border-red-500 text-sm w-fit px-2 py-1 rounded-md shadow-md;
     } */
