--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -39,3 +39,14 @@
       @apply text-red-500 text-sm -mt-2;
     }
   }
+  @layer utilities {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+   /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+  }
+}
